# games

bevy-12-ep2/: .gitignore
bevy-12-ep2/src/: camera.rs  spaceship.rs
bevy-12-ep3/: Cargo.toml  README.md
bevy-12-ep3/src/: asset_loader.rs  asteroid.rs  camera.rs  debug.rs  main.rs  movement.rs  spaceship.rs
bevy-12-ep4/: Cargo.toml  README.md
bevy-12-ep4/src/: asteroid.rs  collision_detection.rs  debug.rs  despawn.rs  main.rs  movement.rs  schedule.rs  spaceship.rs
coin-dash/: README.md  icon.svg.import  project.godot
coin-dash/assets/: Kenney Bold.ttf.import  cactus.png.import  grass.png.import
dogmancer-td/: DESIGN.md  README.md  TODO.md  index.html  package-lock.json  package.json
dogmancer-td/src/: enemy.ts  gamestate.ts  globals.ts  level.ts  main.ts  player.ts  resources.ts  ui.ts
dogmancer-td/tiled/: Terrain (32x32).tsx  tiled_map.tmx
sniper-tactics/: README.md  package.json
tactical-space-combat/: game.gd  game.tscn  global.gd  icon.png.import  icon.svg.import  project.godot
tactical-space-combat/TacticalSpaceCombat/: utils.gd
trijam-244/: .gitignore  README.md  TODO.md  ball.tscn  block.gd  block.tscn  game.gd  game.gdshader  game.tscn  icon.svg.import  losegamemusic.ogg.import  midnight_cruiser.mp3.import  project.godot  qubodup-crash.ogg.import  spikes.tscn
trijam-245/: README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.js
trijam-245/src/: background.ts  config.ts  gameState.ts  level.ts  loader.ts  main.ts  sheep.ts  style.css  (+1 more)
trijam-246/: README.md  TODO.md  index.html  package-lock.json  package.json
(+69 files in other folders)
