[package]
name = "bevy-12-ep2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
opt-level = 3

[dependencies]
bevy = "0.12.0"
